# runner-hub

./: LICENSE  README.md  setup.cfg
requirements/: common.txt
runner_hub/fenia/simple/: Dockerfile  Dockerfile.apline  docker-compose.alpine.yml  docker-compose.yml
runner_hub/fenia/simple/test/: Tp
runner_hub/fenia/simple/test/system/: controlDict
runner_hub/gmsh/tenex/borehole/opt_gmsh/: parameters.json
runner_hub/gmsh/tenex/container_complex/gmsh/: filling.json  rw.json  steel.json
runner_hub/gmsh/tenex/container_complex/opt_gmsh/: parameters.json
runner_hub/gmsh/tenex/container_simple/: .env.example  Dockerfile  dag.html  dag_options.html  docker-compose.yml  readme.md  readme.txt
runner_hub/gmsh_fenia/: .dockerignore  Dockerfile  build.sh  build_app.sh  build_runner_hub.sh  docker-compose.yml  requirements.txt
runner_hub/gmsh_fenia/tenex/: Dockerfile
runner_hub/gmsh_fenia/tenex/borehole/: .dockerignore  .env.example  Dockerfile  Dockerfile.grid  Dockerfile.grid.postgres  Dockerfile.tenex.borehole  Dockerfile.test  dag.html  dag_options.html  docker-compose.fixed.postgres.yml  docker-compose.grid.postgres.yml  docker-compose.grid.yml  docker-compose.test.yml  docker-compose.yml  plot.py  readme.txt  run.sh  run_grid_fixed.sh
runner_hub/gmsh_fenia/tenex/chamber/: .env.example  docker-compose.fixed.grid.yml  plot.py  run_grid_fixed.sh
runner_hub/gmsh_fenia/tenex/tunnel/: .env.example  readme.md
runner_hub/tests/: conftest.py
runner_hub/tests/runner/: action.json  sub_action.json  test_runner.py
(+75 files in other folders)
