[metadata]
name = mltrip-runner-hub
version = 0.0.2
author = Roman Butov
author_email = romanbutov637@gmail.com
description = Storage for runner DAGs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PC-Trip/runner-hub
project_urls =
    Bug Tracker = https://github.com/PC-Trip/runner-hub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = runner_hub
python_requires = >=3.6
install_requires =
    mltrip-runner
